# Coop-SLAM

./: Adding_new_models.md  DataGen_README.md  LICENSE  README.md
fortress_ws/devel/: .catkin  _setup_util.py  setup.sh
humble_ws/: Data_transfrom.ipynb  requirements.txt  resnet50_fpnkeypoint_fcn.ipynb
humble_ws/bags_coop/: output_options.yaml
humble_ws/bags_coop/bag1/: metadata.yaml
humble_ws/bags_coop/bag11/: bag11_1.db3  metadata.yaml
humble_ws/bags_coop/merged_bag/: metadata.yaml
humble_ws/bags_coop/merged_bag_2/: metadata.yaml
humble_ws/instances_footprint/Mecanum_lift/: 150.png~
humble_ws/r2b_dataset/: annotation.py  build_bev.py  extract_camera_info.py  extract_lidar.py  extract_rgb.py  extract_tf.py  move_images.py  reliability_override.yaml  seg_annotation.py
humble_ws/r2b_dataset/r2b_hallway_label/: 000000 (copy).txt  000001.txt  000002.txt  000003.txt  000004.txt  000005.txt  000006.txt  000007.txt  000008.txt  000009.txt  000010.txt  000011.txt  000012.txt  000013.txt  000014.txt  000015.txt  000016.txt  000017.txt  000018.txt  000019.txt  000020.txt  000021.txt  000022.txt  000023.txt  000024.txt  000025.txt  000026.txt  000027.txt  000028.txt  000029.txt  000030.txt  000031.txt  000032.txt  000033.txt  000034.txt  000035.txt  000036.txt  000037.txt  000038.txt  000039.txt  (+10 more)
humble_ws/r2b_dataset/r2b_hallway_seglabel/: 000012.png~  000046.png~
humble_ws/r2b_dataset/r2b_storage_label/: 000000 (copy).txt  000001.txt  000002.txt  000003.txt  000004.txt  000005.txt  000006.txt  000007.txt  000008.txt  (+50 more)
humble_ws/src/arm_gz_control/: CMakeLists.txt  package.xml
humble_ws/src/arm_gz_control/include/arm_gz_control/: joint_position_controller.hpp  joint_trajectory_controller.hpp
humble_ws/src/arm_gz_control/src/: joint_controller_main.cpp  joint_position_controller.cpp  joint_trajectory_controller.cpp  timer_teste.cpp  timer_teste_fim.cpp
humble_ws/src/coop_detection_and_mapping/: package.xml  setup.cfg  setup.py
humble_ws/src/coop_detection_and_mapping/coop_detection_and_mapping/: bev_utils.py  centralized_ogm_builder.py  coop_evaluation.py  demo_utils.py  detection_publisher.py  evaluation_utils.py  fpn_resnet.py  groundtruth_gen.py  human_data_saver.py  model_utils.py  synth_config.py  synth_data_utils.py  torch_utils.py
humble_ws/src/coop_detection_and_mapping/groundtruths/poses/: 000000.txt  000001.txt  000002.txt  000003.txt  000004.txt  000005.txt  000006.txt  000007.txt  000008.txt  000009.txt  000010.txt  000011.txt  000012.txt  000013.txt  000014.txt  000015.txt  000016.txt  000017.txt  000018.txt  000019.txt  000020.txt  000021.txt  000022.txt  000023.txt  000024.txt  000025.txt  000026.txt  000027.txt  000028.txt  000029.txt  000030.txt  000031.txt  000032.txt  000033.txt  000034.txt  000035.txt  000036.txt  000037.txt  000038.txt  000039.txt  (+61 more)
humble_ws/src/coop_detection_and_mapping/groundtruths_2/poses/: 000000.txt  000001.txt  000002.txt  000003.txt  000004.txt  000005.txt  000006.txt  000007.txt  000008.txt  000009.txt  000010.txt  000011.txt  000012.txt  000013.txt  000014.txt  000015.txt  000016.txt  000017.txt  000018.txt  000019.txt  000020.txt  000021.txt  000022.txt  000023.txt  000024.txt  000025.txt  000026.txt  000027.txt  000028.txt  000029.txt  000030.txt  000031.txt  000032.txt  000033.txt  000034.txt  000035.txt  000036.txt  000037.txt  000038.txt  000039.txt  (+61 more)
humble_ws/src/coop_detection_and_mapping/human_data/depth/: 000000.exr  000001.exr  000002.exr  000003.exr  000004.exr  000005.exr  000006.exr  000007.exr  000008.exr  000009.exr  000010.exr  000011.exr  000012.exr  000013.exr  000014.exr  000015.exr  000016.exr  000017.exr  000018.exr  000019.exr  000020.exr  000021.exr  000022.exr  000023.exr  000024.exr  000025.exr  000026.exr  000027.exr  000028.exr  000029.exr  000030.exr  000031.exr  000032.exr  000033.exr  000034.exr  000035.exr  000036.exr  000037.exr  000038.exr  000039.exr  (+64 more)
humble_ws/src/coop_detection_and_mapping/map/: map.yaml  map_resized.yaml
humble_ws/src/coop_detection_and_mapping/ogms/poses/: 000000.txt  000001.txt  000002.txt  000003.txt  000004.txt  000005.txt  000006.txt  000007.txt  000008.txt  000009.txt  000010.txt  000011.txt  000012.txt  000013.txt  000014.txt  000015.txt  000016.txt  000017.txt  000018.txt  000019.txt  000020.txt  000021.txt  000022.txt  000023.txt  000024.txt  000025.txt  000026.txt  000027.txt  000028.txt  000029.txt  000030.txt  000031.txt  000032.txt  000033.txt  000034.txt  000035.txt  000036.txt  000037.txt  000038.txt  000039.txt  (+59 more)
humble_ws/src/coop_detection_and_mapping/ogms_2/poses/: 000000.txt  000001.txt  000002.txt  000003.txt  000004.txt  000005.txt  000006.txt  000007.txt  000008.txt  000009.txt  000010.txt  000011.txt  000012.txt  000013.txt  000014.txt  000015.txt  000016.txt  000017.txt  000018.txt  000019.txt  000020.txt  000021.txt  000022.txt  000023.txt  000024.txt  000025.txt  000026.txt  000027.txt  000028.txt  000029.txt  000030.txt  000031.txt  000032.txt  000033.txt  000034.txt  000035.txt  000036.txt  000037.txt  000038.txt  000039.txt  (+59 more)
sim_ws/: 99-realsense-libusb.rules  frames.gv
sim_ws/log/: latest_build  latest_graph
sim_ws/src/: rbkairos.sdf
sim_ws/src/marker_mapping-master/: CMakeLists.txt  README.md  package.xml  setup.py
sim_ws/src/marker_mapping-master/config/: markers.yaml
sim_ws/src/marker_mapping-master/msg/: MarkerMappingState.msg
sim_ws/src/marker_mapping-master/src/marker_mapping/: marker_mapping_node.py
sim_ws/src/marker_mapping-master/srv/: InitPoseFromMarker.srv  SaveMarker.srv
(+1094 files in other folders)
