<?xml version="1.0"?>
<package>
  <name>marker_mapping</name>
  <version>1.0.0</version>
  <description>The marker_mapping package</description>


  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>


  <license>BSD</license>


  <author email="rnavarro@robotnik.es">Román Navarro</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ar_track_alvar_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>robotnik_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>ar_track_alvar_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>robotnik_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
